Prevent custom select control button text overflow

--- a/client/components/custom-select-control/style.scss
+++ b/client/components/custom-select-control/style.scss
@@ -13,7 +13,14 @@
 		}
 	}
 
-	.components-custom-select-control__button.placeholder {
-		color: $gray-50;
+	.components-custom-select-control__button {
+		display: block;
+		text-overflow: ellipsis;
+		white-space: nowrap;
+		overflow-x: hidden;
+
+		&.placeholder {
+			color: $gray-50;
+		}
 	}
 }
